lab04-route53/04-security_groups.tf
resource "aws_security_group" "route_allow_http_ssh" {
  name = "route_allow_ping_ssh_apache"
  vpc_id = "${aws_vpc.main_route53.id}"

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = -1
    to_port = -1
    protocol = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Allow trafic to HTTP & SSH"
  }
}

resource "aws_security_group" "elb_http" {
  name = "elb_http"
  description = "Allow trafic to elb"
  vpc_id = "${aws_vpc.main_route53.id}"

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Allow trafic to ELB"
  }
}
